--- a/FeedControl/css/shop-homepage.css
+++ b/FeedControl/css/shop-homepage.css
@@ -3,6 +3,10 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
@@ -32,6 +36,8 @@ body {
 
 .thumbnail img {
     width: 100%;
+    height: auto;
+
 }
 
 .ratings {
@@ -42,11 +48,32 @@ body {
 
 .thumbnail {
     padding: 0;
+    
 }
 
 .thumbnail .caption-full {
     padding: 9px;
     color: #333;
+}
+
+.container-contato {
+    height: 100%;
+}
+
+.thumb-vendedor{
+    border-radius: 50%;
+    overflow: hidden;
+    width: 180px;
+    height: 180px;
+    
+}
+
+.thumb-vendedor img {
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+
 }
 
 footer {
