Alterada a pagina de vendedores e shop-homepage de css

--- a/FeedControl/css/shop-homepage.css
+++ b/FeedControl/css/shop-homepage.css
@@ -382,6 +382,26 @@ hr {
 }
 
 
+html, body {height:100%;}
+
+.geral {
+    min-height:100%;
+    position:relative;
+    width:800px;
+}
+
+.footer {
+    position:fixed;
+    bottom:0;
+    width:100%;   
+}
+
+.content {overflow:hidden;}
+.aside {width:200px;}
+.fleft {float:left;}
+.fright {float:right;}
+
+
 
 
 
