--- a/FeedControl/css/shop-homepage.css
+++ b/FeedControl/css/shop-homepage.css
@@ -6,7 +6,7 @@
 html {
     font-family: "Roboto";
     width: 100%;
-    height: 100%;
+    height: 100%;    
 }
 
 body {
@@ -78,10 +78,6 @@ body {
 
 }
 
-footer {
-    margin: 50px 0;
-}
-
 .racao img{
     width: 200px;
     height: 280px;
@@ -103,32 +99,75 @@ a:hover{
 }
 
 
-
-html, body {height:100%;}
-
 .geral {
     min-height:100%;
     position:relative;
     width:800px;
 }
 
-.footer {
-    position:fixed;
-    bottom:0;
-    width:100%;   
+article {
+    padding-bottom: 60px; 
+    width: 900px; 
+    margin: 0 auto;
 }
 
-.content {overflow:hidden;}
-.aside {width:200px;}
-.fleft {float:left;}
-.fright {float:right;}
+#rodape{
+    background: #f0f5f5;
+    font-size: 12px;
+    line-height: 80px;
+    padding: 200px 0;
+    margin: 0;
+}
+/*footer {
+    position: fixed; 
+    bottom: 0px; 
+    width: 100%; 
+    height: 150px; 
+    background-color: green;
+}*/
 
+
+#map-container {
+    -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+    width: 600px;
+}
 
 
 #map {
-  height: 800px;
-  width: 100%;
- }
+    height: 800px;
+    width: 100%;
+}
+.equipe{
+    text-align: center;
+    font-family: "Roboto";
+    color: green;
+}
+.nossaEquipe{
+    text-align: center;
+    font-family: "Roboto";
+    color: green;
+    font-size: 60px;
+}
+.multidisciplinar{
+    background-color: #d1e0e0;
+}
+.multidiciplinar{
+    background-color:#f0f5f5;
+}
+.bloco{
+    width: 80px;
+    height: 100px;
+}
+#primeiro{
+    margin-right: 260px;
+}
+.conteudo{
+    margin: 0 auto;
+    padding: 0 10px 0 10px;
+    width: 1080px;
+}
 
 
 
